@@ -1,3 +1,5 @@
+import org.springframework.boot.gradle.tasks.run.BootRun
+
 plugins {
     alias(libs.plugins.spring.boot)
     alias(libs.plugins.spring.dependency.management)
@@ -11,9 +13,12 @@ dependencies {
     implementation(libs.kotlin.stdlib)
     implementation(project(":backend:domains"))
     implementation(project(":backend:infrastructure"))
-    implementation("org.springframework.boot:spring-boot-starter-actuator")
     testImplementation(libs.spring.starter.test) {
         exclude("org.junit.vintage:junit-vintage-engine")
     }
     testImplementation(kotlin("test"))
+}
+
+tasks.withType<BootRun> {
+    jvmArgs = listOf("--illegal-access=deny")
 }
